# martin

./: .gitignore  README.md  basic.py  basicv2.py  builder.py  config.py  main.py  pyproject.toml  v0.3.py  v0.5.py
app/: main.py
src/: agent.py
templates/: chat.html  index.html
tools/: kg.py  mvp.py
