[tool.poetry]
name = "martin"
version = "0.1.1"
description = ""
authors = ["Teïlo <teilomillet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
llama-index = "^0.10.33"
python-dotenv = "^1.0.1"
fire = "^0.6.0"
llama-index-llms-litellm = "^0.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
