[tool.poetry]
name = "martin"
version = "0.1.2"
description = ""
authors = ["Teïlo <teilomillet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.13"
llama-index = "^0.10.33"
python-dotenv = "^1.0.1"
fire = "^0.6.0"
llama-index-llms-litellm = "^0.1.4"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
jinja2 = "^3.1.3"
nest-asyncio = "^1.6.0"
llama-index-agent-llm-compiler = "^0.1.0"
pyautogen = "^0.2.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
